{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 73,
  "lineage": "d0403845-bb0f-2549-c187-6c5648c453a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07e18542263d52622",
            "domain": "vpc",
            "id": "eipalloc-09339ea061c8459ab",
            "instance": "i-050b519f4ff165a26",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b771c2030aa1314a",
            "private_dns": "ip-172-31-90-129.ec2.internal",
            "private_ip": "172.31.90.129",
            "public_dns": "ec2-34-200-128-142.compute-1.amazonaws.com",
            "public_ip": "34.200.128.142",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.role-instance-profile",
            "aws_iam_role.role-k8s-s3",
            "aws_instance.rancher-elb-01",
            "aws_s3_bucket.k8s-s3-rancher",
            "aws_security_group.sg-rancher",
            "aws_security_group.sg-rancher-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher-elb-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:903866160115:instance/i-050b519f4ff165a26",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Role-Instance-Kubernetes-Rancher",
            "id": "i-050b519f4ff165a26",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rodrigofrsppk",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b771c2030aa1314a",
            "private_dns": "ip-172-31-90-129.ec2.internal",
            "private_ip": "172.31.90.129",
            "public_dns": "ec2-3-82-193-217.compute-1.amazonaws.com",
            "public_ip": "3.82.193.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06efbfa45aa3d71b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_k8s",
              "sg_k8s_id"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2f730f0e",
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Funcao": "ELB",
              "Name": "k8s-elb-01",
              "Onwer": "AlgarTech - CCoE",
              "Projeto": "Plataforma Rancher"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0af683caa3484decc",
              "sg-0fab31edd86d1b068"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.role-instance-profile",
            "aws_iam_role.role-k8s-s3",
            "aws_s3_bucket.k8s-s3-rancher",
            "aws_security_group.sg-rancher",
            "aws_security_group.sg-rancher-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher-master-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:903866160115:instance/i-0d2148bd87ac02a61",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Role-Instance-Kubernetes-Rancher",
            "id": "i-0d2148bd87ac02a61",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rodrigofrsppk",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05031e9d33e9a78d0",
            "private_dns": "ip-172-31-87-97.ec2.internal",
            "private_ip": "172.31.87.97",
            "public_dns": "ec2-54-174-86-21.compute-1.amazonaws.com",
            "public_ip": "54.174.86.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072d99cdc9c052462",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_k8s",
              "sg_k8s_id"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2f730f0e",
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Funcao": "K8s Master",
              "Name": "k8s-master-01",
              "Onwer": "AlgarTech - CCoE",
              "Projeto": "Plataforma Rancher"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0af683caa3484decc",
              "sg-0fab31edd86d1b068"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.role-instance-profile",
            "aws_iam_role.role-k8s-s3",
            "aws_s3_bucket.k8s-s3-rancher",
            "aws_security_group.sg-rancher",
            "aws_security_group.sg-rancher-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher-master-02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:903866160115:instance/i-0d44c15af486438ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Role-Instance-Kubernetes-Rancher",
            "id": "i-0d44c15af486438ef",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rodrigofrsppk",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06c5ca4da595a3ab5",
            "private_dns": "ip-172-31-80-245.ec2.internal",
            "private_ip": "172.31.80.245",
            "public_dns": "ec2-52-207-233-216.compute-1.amazonaws.com",
            "public_ip": "52.207.233.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f6b130e60a29f1b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_k8s",
              "sg_k8s_id"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2f730f0e",
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Funcao": "K8s Master",
              "Name": "k8s-master-02",
              "Onwer": "AlgarTech - CCoE",
              "Projeto": "Plataforma Rancher"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0af683caa3484decc",
              "sg-0fab31edd86d1b068"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.role-instance-profile",
            "aws_iam_role.role-k8s-s3",
            "aws_s3_bucket.k8s-s3-rancher",
            "aws_security_group.sg-rancher",
            "aws_security_group.sg-rancher-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher-master-03",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:903866160115:instance/i-08a81f10698d7f886",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Role-Instance-Kubernetes-Rancher",
            "id": "i-08a81f10698d7f886",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rodrigofrsppk",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-073ad85b8369c5144",
            "private_dns": "ip-172-31-85-169.ec2.internal",
            "private_ip": "172.31.85.169",
            "public_dns": "ec2-54-210-139-84.compute-1.amazonaws.com",
            "public_ip": "54.210.139.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-013033f22026e5115",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_k8s",
              "sg_k8s_id"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2f730f0e",
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Funcao": "K8s Master",
              "Name": "k8s-master-03",
              "Onwer": "AlgarTech - CCoE",
              "Projeto": "Plataforma Rancher"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0af683caa3484decc",
              "sg-0fab31edd86d1b068"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.role-instance-profile",
            "aws_iam_role.role-k8s-s3",
            "aws_s3_bucket.k8s-s3-rancher",
            "aws_security_group.sg-rancher",
            "aws_security_group.sg-rancher-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher-worker-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:903866160115:instance/i-0dc14377fbb8f1d4b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Role-Instance-Kubernetes-Rancher",
            "id": "i-0dc14377fbb8f1d4b",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rodrigofrsppk",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e923a49bed0af417",
            "private_dns": "ip-172-31-89-18.ec2.internal",
            "private_ip": "172.31.89.18",
            "public_dns": "ec2-3-89-222-45.compute-1.amazonaws.com",
            "public_ip": "3.89.222.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dbc04dcdda66de67",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_k8s",
              "sg_k8s_id"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2f730f0e",
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Funcao": "K8s Worker",
              "Name": "k8s-worker-01",
              "Onwer": "AlgarTech - CCoE",
              "Projeto": "Plataforma Rancher"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0af683caa3484decc",
              "sg-0fab31edd86d1b068"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.role-instance-profile",
            "aws_iam_role.role-k8s-s3",
            "aws_s3_bucket.k8s-s3-rancher",
            "aws_security_group.sg-rancher",
            "aws_security_group.sg-rancher-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher-worker-02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:903866160115:instance/i-07f464f36f3e20d1b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Role-Instance-Kubernetes-Rancher",
            "id": "i-07f464f36f3e20d1b",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rodrigofrsppk",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-079d67521dab6b1d7",
            "private_dns": "ip-172-31-83-159.ec2.internal",
            "private_ip": "172.31.83.159",
            "public_dns": "ec2-3-94-173-23.compute-1.amazonaws.com",
            "public_ip": "3.94.173.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03861f421492f8eac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_k8s",
              "sg_k8s_id"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2f730f0e",
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Funcao": "K8s Worker",
              "Name": "k8s-worker-02",
              "Onwer": "AlgarTech - CCoE",
              "Projeto": "Plataforma Rancher"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0af683caa3484decc",
              "sg-0fab31edd86d1b068"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.role-instance-profile",
            "aws_iam_role.role-k8s-s3",
            "aws_s3_bucket.k8s-s3-rancher",
            "aws_security_group.sg-rancher",
            "aws_security_group.sg-rancher-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rancher",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903866160115:security-group/sg-0fab31edd86d1b068",
            "description": "Security Group Kubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fab31edd86d1b068",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso 22 - External",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_k8s",
            "name_prefix": "",
            "owner_id": "903866160115",
            "revoke_rules_on_delete": false,
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Name": "Security Group Kubernetes",
              "Onwer": "AlgarTech - CCoE",
              "Projeto": "Plataforma Rancher"
            },
            "timeouts": null,
            "vpc_id": "vpc-9d5bd9e0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rancher-id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903866160115:security-group/sg-0af683caa3484decc",
            "description": "All Traffic Security Group Kubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af683caa3484decc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SG Acesso 6443",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0fab31edd86d1b068"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_k8s_id",
            "name_prefix": "",
            "owner_id": "903866160115",
            "revoke_rules_on_delete": false,
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Name": "All Traffic Security Group Kubernetes",
              "Onwer": "AlgarTech - CCoE",
              "Projeto": "Plataforma Rancher"
            },
            "timeouts": null,
            "vpc_id": "vpc-9d5bd9e0"
          },
          "dependencies": [
            "aws_security_group.sg-rancher"
          ]
        }
      ]
    }
  ]
}